--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -99,9 +99,9 @@ Macro Cut Object for Magnets
 <li>Supports re-cutting already-cut objects (preserves existing holes).</li>
 <li>Automatically separates the two parts for easy viewing.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Open a document with the object you want to cut.</li>
 <li>Optionally select the object and/or a datum plane before running the macro.</li>
@@ -119,9 +119,9 @@ Macro Cut Object for Magnets
 <li>Click "Execute Cut".</li></ol>
 </div>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=MacroCutObjectForMagnetsDialog.png&amp;filetimestamp=20260106015545&amp;.html" class="mw-file-description"><img src="../File/MacroCutObjectForMagnetsDialog.png" decoding="async" width="400" height="442" class="mw-file-element" data-file-width="994" data-file-height="1098"></a><figcaption></figcaption></figure>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Example">Example</span></h2>
-</div>
+<p><span id="Example"></span>
+</p>
+<h2><span class="mw-headline" id="Beispiel">Beispiel</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This image shows a vase object in its original form, and after being cut multiple times with the macro. Magnets can then be inserted to object, and the object can be re-assembled. This example was to create a "breakable" vase for a theatrical stage performance, but there are many other potential uses as well.
 </p>
@@ -270,12 +270,12 @@ Macro Cut Object for Magnets
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113194207
+Cached time: 20260113194220
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.068 seconds
+CPU time usage: 0.046 seconds
+Real time usage: 0.080 seconds
 Preprocessor visited node count: 167/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
@@ -286,13 +286,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.355      1 -total
- 75.77%   15.422      1 Template:CodeDownload
- 13.19%    2.685      1 Template:Macro
-  9.48%    1.930      3 Template:FileName
+100.00%    9.664      1 -total
+ 40.11%    3.876      1 Template:Macro
+ 32.81%    3.171      1 Template:CodeDownload
+ 21.21%    2.050      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194207 and revision id 1737914. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194220 and revision id 1737918. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
