--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Cut Object For Magnets/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Cut+Object+For+Magnets&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_Cut_Object_For_Magnets.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Cut Object For Magnets (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Cut_Object_For_Magnets.html" class="mw-pt-progress mw-pt-progress--low" title="Macro Cut Object For Magnets (4% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -157,9 +157,9 @@ Macro Cut Object for Magnets
 <li>Skips holes that cannot be safely placed.</li>
 <li>Reports repositioned and skipped holes in the console.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Parameters">Parameters</span></h2>
-</div>
+<p><span id="Parameters"></span>
+</p>
+<h2><span class="mw-headline" id="Parameter">Parameter</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable">
 <tbody><tr>
@@ -270,12 +270,12 @@ Macro Cut Object for Magnets
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113194220
+Cached time: 20260113194227
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.080 seconds
+CPU time usage: 0.034 seconds
+Real time usage: 0.052 seconds
 Preprocessor visited node count: 167/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
@@ -286,13 +286,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.664      1 -total
- 40.11%    3.876      1 Template:Macro
- 32.81%    3.171      1 Template:CodeDownload
- 21.21%    2.050      3 Template:FileName
+100.00%    5.900      1 -total
+ 43.73%    2.580      1 Template:Macro
+ 33.14%    1.955      1 Template:CodeDownload
+ 17.98%    1.061      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194220 and revision id 1737918. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194227 and revision id 1737920. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
