--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -211,9 +211,7 @@ Macro Cut Object for Magnets
 <li>An object with a solid shape (Part or PartDesign body).</li>
 <li>For model plane mode: a datum plane or object with planar faces.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a>.</li>
 <li>Copy the file to your FreeCAD macro directory:
@@ -222,9 +220,9 @@ Macro Cut Object for Magnets
 <li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Macro/</span></li></ul></li>
 <li>Optionally, download the toolbar icon and place it in the same directory.</li></ol>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Tips">Tips</span></h2>
-</div>
+<p><span id="Tips"></span>
+</p>
+<h2><span class="mw-headline" id="Tipps">Tipps</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><b>Magnet sizing</b>: Measure your magnets carefully. Common sizes are 3mm, 5mm, and 6mm diameter.</li>
 <li><b>Add tolerance</b>: Consider adding 0.1-0.2mm to the diameter for easier magnet insertion.</li>
@@ -270,13 +268,13 @@ Macro Cut Object for Magnets
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113194227
+Cached time: 20260113194238
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.052 seconds
-Preprocessor visited node count: 167/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.059 seconds
+Preprocessor visited node count: 166/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
 Highest expansion depth: 5/100
@@ -286,13 +284,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.900      1 -total
- 43.73%    2.580      1 Template:Macro
- 33.14%    1.955      1 Template:CodeDownload
- 17.98%    1.061      3 Template:FileName
+100.00%    8.625      1 -total
+ 45.11%    3.891      1 Template:Macro
+ 29.17%    2.516      1 Template:CodeDownload
+ 22.33%    1.926      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194227 and revision id 1737920. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194238 and revision id 1737924. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
