--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Multi Export/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Multi+Export&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_Multi_Export.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Multi Export (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Multi_Export.html" class="mw-pt-progress mw-pt-progress--low" title="Macro Multi Export (6% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -132,11 +132,9 @@ Macro Multi Export
 <p><span id="Source_Code"></span>
 </p>
 <h2><span class="mw-headline" id="Quellcode">Quellcode</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The full source code is hosted on GitHub:
+<p>Der vollst&auml;ndige Quellcode wird auf GitHub gehostet:
 </p>
-<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro on GitHub</a></li></ul>
-</div>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro auf GitHub</a></li></ul>
 <p><span id="Script"></span>
 </p>
 <h2><span class="mw-headline" id="Skript">Skript</span></h2>
@@ -160,29 +158,29 @@ Macro Multi Export
 <li><a href="../de/Import_Export.html" title="Import Export/de">Import/Export</a> - &Uuml;bersicht &uuml;ber die Import-/Exportformate von FreeCAD.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113195517
+Cached time: 20260113195550
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.035 seconds
-Real time usage: 0.047 seconds
-Preprocessor visited node count: 139/1000000
+CPU time usage: 0.030 seconds
+Real time usage: 0.040 seconds
+Preprocessor visited node count: 138/1000000
 Post&#8208;expand include size: 3189/2097152 bytes
 Template argument size: 1097/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 841/5000000 bytes
+Unstrip post&#8208;expand size: 842/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.688      1 -total
- 50.01%    3.845      1 Template:Macro
- 27.02%    2.077      1 Template:CodeDownload
- 18.26%    1.404      3 Template:FileName
+100.00%    5.084      1 -total
+ 46.09%    2.343      1 Template:Macro
+ 27.46%    1.396      1 Template:CodeDownload
+ 21.77%    1.107      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195516 and revision id 1737974. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195550 and revision id 1737976. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
