--- a/wiki/de/Macros_recipes.html
+++ b/wiki/de/Macros_recipes.html
@@ -80,7 +80,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Creating_faces_from_a_DXF_file.png&amp;filetimestamp=20190615132235&amp;.html" class="mw-file-description"><img src="../File/Macro_Creating_faces_from_a_DXF_file.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Creating_faces_from_a_DXF_file.html" title="Macro Creating faces from a DXF file/de">Makro Fl&auml;chen aus einer DXF-Datei erstellen</a></span>: Dieses Makro erstellt eine Fl&auml;che aus einer DXF-Datei, wobei die &bdquo;Ebenen&ldquo; separat erkannt und in Gruppen trainiert werden.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_DeepCopy.png&amp;filetimestamp=20180316204019&amp;.html" class="mw-file-description"><img src="../File/Macro_DeepCopy.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="70" data-file-height="70"></a></span> <a href="../de/Macro_DeepCopy.html" title="Macro DeepCopy/de">Makro DeepCopy</a></span>: Erstellt einen Verbund aus einem Teil mit einer Kopie aller seiner Formen.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_DXF_to_Face_and_Sketch.png&amp;filetimestamp=20160723200645&amp;.html" class="mw-file-description"><img src="../File/Macro_DXF_to_Face_and_Sketch.png" decoding="async" width="24" height="23" class="mw-file-element" data-file-width="66" data-file-height="64"></a></span> <a href="../de/Macro_DXF_to_Face_and_Sketch.html" title="Macro DXF to Face and Sketch/de">Makro DXF zu Fl&auml;che und Skizze</a></span>: Dieses Makro konvertiert ausgew&auml;hlte Elemente einer importierten DXF-Datei in Fl&auml;chen und Skizzen.</li></ul>
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Dxf_To_Shape.png&amp;filetimestamp=20161121150110&amp;.html" class="mw-file-description"><img src="../File/Macro_Dxf_To_Shape.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Dxf_To_Shape.html" title="Macro Dxf To Shape">Macro Dxf To Shape</a></span>: Makro-Dienstprogramm zum Erstellen einzigartiger Linienz&uuml;gen mit vielen Linienz&uuml;gen. Der Typ des erstellten Linienzugs wird ausgew&auml;hlt: Linienzug, Bspline, BsplineKurve, BsplineKurve + Bogen, Polygon, Bezier-Kurve.</li></ul>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Dxf_To_Shape.png&amp;filetimestamp=20161121150110&amp;.html" class="mw-file-description"><img src="../File/Macro_Dxf_To_Shape.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Dxf_To_Shape.html" title="Macro Dxf To Shape">Makro Dxf To Shape</a></span>: Makro-Dienstprogramm zum Erstellen einzigartiger Linienz&uuml;gen mit vielen Linienz&uuml;gen. Der Typ des erstellten Linienzugs wird ausgew&auml;hlt: Linienzug, Bspline, BsplineKurve, BsplineKurve + Bogen, Polygon, Bezier-Kurve.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Extract_Wires_from_Mesh.png&amp;filetimestamp=20190614153159&amp;.html" class="mw-file-description"><img src="../File/Macro_Extract_Wires_from_Mesh.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_Extract_Wires_from_Mesh.html" title="Macro Extract Wires from Mesh/de">Makro Linienz&uuml;ge aus Netzen extrahieren</a></span>: Extrahiert begrenzende Linienz&uuml;ge aus ausgew&auml;hlten Netzen.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FaceToSketch.png&amp;filetimestamp=20190614161756&amp;.html" class="mw-file-description"><img src="../File/Macro_FaceToSketch.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FaceToSketch.html" title="Macro FaceToSketch/de">Makro Fl&auml;che zu Skizze</a></span>: Wandelt die ausgew&auml;hlte Fl&auml;che in eine einzelne Skizze ohne Beschr&auml;nkungen um.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCBmpImportLogo.svg&amp;filetimestamp=20210923161910&amp;.html" class="mw-file-description"><img src="../File/FCBmpImportLogo.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCBmpImport.html" title="Macro FCBmpImport/de">Makro FCBmpImport</a></span>: Importiert Schwarz-Wei&szlig;-BMP-Bilder als Skizze, Drahtmodell oder Volumenmodell oder Graustufen-BMP-Bilder f&uuml;r Lithophanen in FreeCAD.</li></ul>
@@ -416,12 +416,12 @@
 <li>Unter dem Men&uuml;reiter <b>Symbolleisten</b> eine neue Symbolleiste erstellen und das Makro aus der Kategorie <b>Makros</b> hinzuf&uuml;gen.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113195953
+Cached time: 20260113200102
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.515 seconds
-Real time usage: 0.879 seconds
+CPU time usage: 0.527 seconds
+Real time usage: 0.733 seconds
 Preprocessor visited node count: 2862/1000000
 Post&#8208;expand include size: 28787/2097152 bytes
 Template argument size: 16107/2097152 bytes
@@ -432,15 +432,15 @@ Unstrip post&#8208;expand size: 1955/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.048      1 -total
- 33.57%   17.474    219 Template:MacroLink
- 13.06%    6.798      3 Template:Button
-  9.89%    5.145      1 Template:Version/de
-  9.39%    4.885      6 Template:MenuCommand
-  4.25%    2.214      1 Template:TOCright
+100.00%   50.481      1 -total
+ 37.01%   18.683    219 Template:MacroLink
+  4.29%    2.166      1 Template:TOCright
+  3.53%    1.783      6 Template:MenuCommand
+  3.05%    1.542      1 Template:Version/de
+  2.49%    1.256      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113195952 and revision id 1737984. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200101 and revision id 1737986. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
